--- a/Neutrinodevs.PedidosOnline.Presentation/appsettings.json
+++ b/Neutrinodevs.PedidosOnline.Presentation/appsettings.json
@@ -1,4 +1,10 @@
 {
+  {
+    "ConnectionStrings": {
+      "pedidos_online": "Data Source=BDUARTE-LAP; Initial Catalog=ND_PEDIDOS_ONLINE; user id=sa; password=12345678",
+      "encode": "MTIzNDU2Nzg="
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
