--- a/Neutrinodevs.PedidosOnline.Domain/Neutrinodevs.PedidosOnline.Domain.csproj
+++ b/Neutrinodevs.PedidosOnline.Domain/Neutrinodevs.PedidosOnline.Domain.csproj
@@ -5,10 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\Services\" />
-    <Folder Include="Contracts\Repositories\" />
-    <Folder Include="Entities\" />
-    <Folder Include="DTOs\" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
