--- a/Neutrinodevs.PedidosOnline.Infraestructure.Hubs/Neutrinodevs.PedidosOnline.Infraestructure.Hubs.csproj
+++ b/Neutrinodevs.PedidosOnline.Infraestructure.Hubs/Neutrinodevs.PedidosOnline.Infraestructure.Hubs.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.0.3" />
+  </ItemGroup>
+
 </Project>
