--- a/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
+++ b/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
@@ -6,6 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
@@ -14,6 +20,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Neutrinodevs.PedidosOnline.Domain\Neutrinodevs.PedidosOnline.Domain.csproj" />
     <ProjectReference Include="..\Neutrinodevs.PedidosOnline.Infraestructure.Hubs\Neutrinodevs.PedidosOnline.Infraestructure.Hubs.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
