--- a/Neutrinodevs.PedidosOnline.Presentation/Properties/launchSettings.json
+++ b/Neutrinodevs.PedidosOnline.Presentation/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "dashboard/",
+      "launchUrl": "Home/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
