--- a/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
+++ b/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Context\" />
   </ItemGroup>
 
 </Project>
