--- a/Neutrinodevs.PedidosOnline.Presentation/Neutrinodevs.PedidosOnline.Presentation.csproj
+++ b/Neutrinodevs.PedidosOnline.Presentation/Neutrinodevs.PedidosOnline.Presentation.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
