--- a/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
+++ b/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
@@ -24,7 +25,6 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Context\" />
   </ItemGroup>
 
 </Project>
