--- a/Neutrinodevs.PedidosOnline.Presentation/appsettings.Development.json
+++ b/Neutrinodevs.PedidosOnline.Presentation/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "pedidos_online": "Data Source=.; Initial Catalog=ND_PEDIDOS_ONLINE; user id=sa; password=12345678",
+    "encode": "MTIzNDU2Nzg="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
-      "System": "Warning",
-      "Microsoft": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
