--- a/Neutrinodevs.PedidosOnline.Presentation/appsettings.json
+++ b/Neutrinodevs.PedidosOnline.Presentation/appsettings.json
@@ -6,7 +6,8 @@
   ,
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*"
