--- a/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
+++ b/Neutrinodevs.PedidosOnline.Infraestructure/Neutrinodevs.PedidosOnline.Infraestructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="itext7" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
