Se remueve el api key de maps; se agregan capturas de pantalla

--- a/Neutrinodevs.PedidosOnline.Presentation/appsettings.Development.json
+++ b/Neutrinodevs.PedidosOnline.Presentation/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "pedidos_online": "Data Source=.; Initial Catalog=ND_PEDIDOS_ONLINE; user id=sa; password=12345678",
+    "pedidos_online": "Data Source=.; Initial Catalog=ND_PEDIDOS_ONLINE; user id=sa; password=",
     "encode": "MTIzNDU2Nzg="
   },
   "Logging": {
